Update alist domain input value to current URL

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
       <div>
         <label for="alist-domain">Alist/入口域名（可选，纯记录方便日后切换）</label>
-        <input id="alist-domain" type="text" placeholder="https://yume.suimori.com" value="https://alist.nanami-814.online" />
+        <input id="alist-domain" type="text" placeholder="https://yume.suimori.com" value="https://yume.suimori.com" />
         <p class="hint">不会影响转换结果，只是方便预留和记录当前使用的存储入口域名，后续切换可以随时修改。</p>
       </div>
 
