--- a/public/index.html
+++ b/public/index.html
@@ -226,6 +226,8 @@
             CheckAll: () => <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="1.5" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-6 9l2 2 4-4" /></svg>,
             Eye: () => <svg className="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="1.5" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" /><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="1.5" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" /></svg>,
             EyeOff: () => <svg className="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="1.5" d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21" /></svg>,
+            User: () => <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="1.5" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" /></svg>,
+            Shield: () => <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="1.5" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" /></svg>,
         };
 
         // Background
@@ -303,7 +305,7 @@
         };
 
         // Nav Bar - Clickable logo + hamburger menu
-        const NavBar = ({ currentPage, onPageChange, onLogout, onSettingsOpen }) => {
+        const NavBar = ({ currentPage, onPageChange, onLogout, onSettingsOpen, onGuestPreview }) => {
             const [menuOpen, setMenuOpen] = useState(false);
             const menuRef = useRef(null);
             useEffect(() => {
@@ -326,27 +328,32 @@
                             <span className="text-[10px] text-yuzu-500 font-bold tracking-widest mt-1">IMAGE HOSTING</span>
                         </div>
                     </div>
-                    <div className="relative" ref={menuRef}>
-                        <button onClick={() => setMenuOpen(!menuOpen)} className={`p-3 rounded-2xl transition-all ${menuOpen ? 'bg-yuzu-100 text-yuzu-600 shadow-md' : 'bg-white border border-slate-200 text-slate-600 hover:bg-slate-50 hover:shadow-sm'}`}>
-                            {menuOpen ? <Icons.Close /> : <Icons.Menu />}
+                    <div className="flex items-center gap-2">
+                        <button onClick={onGuestPreview} className="p-3 rounded-2xl bg-white border border-slate-200 text-slate-600 hover:bg-slate-50 hover:shadow-sm transition-all" title="访客模式">
+                            <Icons.User />
                         </button>
-                        {menuOpen && (
-                            <div className="absolute right-0 top-full mt-2 bg-white rounded-2xl shadow-xl border border-slate-100 p-2 min-w-[160px] z-50 animate-pop-in">
-                                {menuItems.map(item => (
-                                    <button key={item.id} onClick={() => { onPageChange(item.id); setMenuOpen(false); }}
-                                        className={`w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium transition-colors ${currentPage === item.id ? 'bg-yuzu-50 text-yuzu-600' : 'text-slate-600 hover:bg-slate-50'}`}>
-                                        {item.icon} {item.label}
+                        <div className="relative" ref={menuRef}>
+                            <button onClick={() => setMenuOpen(!menuOpen)} className={`p-3 rounded-2xl transition-all ${menuOpen ? 'bg-yuzu-100 text-yuzu-600 shadow-md' : 'bg-white border border-slate-200 text-slate-600 hover:bg-slate-50 hover:shadow-sm'}`}>
+                                {menuOpen ? <Icons.Close /> : <Icons.Menu />}
+                            </button>
+                            {menuOpen && (
+                                <div className="absolute right-0 top-full mt-2 bg-white rounded-2xl shadow-xl border border-slate-100 p-2 min-w-[160px] z-50 animate-pop-in">
+                                    {menuItems.map(item => (
+                                        <button key={item.id} onClick={() => { onPageChange(item.id); setMenuOpen(false); }}
+                                            className={`w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium transition-colors ${currentPage === item.id ? 'bg-yuzu-50 text-yuzu-600' : 'text-slate-600 hover:bg-slate-50'}`}>
+                                            {item.icon} {item.label}
+                                        </button>
+                                    ))}
+                                    <div className="border-t border-slate-100 my-2"></div>
+                                    <button onClick={() => { onSettingsOpen(); setMenuOpen(false); }} className="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-slate-600 hover:bg-slate-50">
+                                        <Icons.Settings /> 设置
                                     </button>
-                                ))}
-                                <div className="border-t border-slate-100 my-2"></div>
-                                <button onClick={() => { onSettingsOpen(); setMenuOpen(false); }} className="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-slate-600 hover:bg-slate-50">
-                                    <Icons.Settings /> 设置
-                                </button>
-                                <button onClick={() => { onLogout(); setMenuOpen(false); }} className="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-red-500 hover:bg-red-50">
-                                    <Icons.Logout /> 退出登录
-                                </button>
-                            </div>
-                        )}
+                                    <button onClick={() => { onLogout(); setMenuOpen(false); }} className="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-red-500 hover:bg-red-50">
+                                        <Icons.Logout /> 退出登录
+                                    </button>
+                                </div>
+                            )}
+                        </div>
                     </div>
                 </nav>
             );
@@ -975,13 +982,17 @@
         };
 
         // Guest Nav - Minimal
-        const GuestNav = ({ onLogin }) => (
+        const GuestNav = ({ onLogin, isAuthenticated, onAdmin }) => (
             <nav className="w-full max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
                 <div className="flex items-center gap-3">
                     <div className="w-10 h-10 rounded-xl overflow-hidden shadow"><img src="https://mori-pics.suimori.com/KVNheFdLRdZAZBB5p6bckVesBZYIIePF.webp" className="w-full h-full object-cover" /></div>
                     <span className="font-bold text-xl text-slate-800 font-quicksand">yuzusora</span>
                 </div>
-                <button onClick={onLogin} className="px-4 py-2 bg-white border border-slate-200 rounded-xl text-sm font-medium text-slate-600 hover:bg-slate-50 flex items-center gap-2"><Icons.Login /> 登录</button>
+                {isAuthenticated ? (
+                    <button onClick={onAdmin} className="px-4 py-2 bg-yuzu-50 border border-yuzu-200 rounded-xl text-sm font-medium text-yuzu-600 hover:bg-yuzu-100 flex items-center gap-2"><Icons.Shield /> 管理面板</button>
+                ) : (
+                    <button onClick={onLogin} className="px-4 py-2 bg-white border border-slate-200 rounded-xl text-sm font-medium text-slate-600 hover:bg-slate-50 flex items-center gap-2"><Icons.Login /> 登录</button>
+                )}
             </nav>
         );
 
@@ -993,6 +1004,7 @@
             const [toast, setToast] = useState(null);
             const [settingsOpen, setSettingsOpen] = useState(false);
             const [loginOpen, setLoginOpen] = useState(false);
+            const [guestPreview, setGuestPreview] = useState(false); // Admin viewing guest mode
             const [config, setConfig] = useState({ compressWebp: true, compressQuality: 0.8, useOriginalFilename: false, defaultPublic: true, galleryClickCopy: true });
             const [detailImage, setDetailImage] = useState(null);
             const [lightboxImage, setLightboxImage] = useState(null);
@@ -1029,10 +1041,10 @@
             if (authState === 'needsSetup') return <><Toast toast={toast} /><AuthPage onAuth={handleAuth} needsSetup={true} /></>;
 
             // Guest mode - public gallery
-            if (authState === 'guest') return (
+            if (authState === 'guest' || guestPreview) return (
                 <div className="min-h-screen">
                     <Background /><Toast toast={toast} />
-                    <GuestNav onLogin={() => setLoginOpen(true)} />
+                    <GuestNav onLogin={() => setLoginOpen(true)} isAuthenticated={authState === 'authenticated'} onAdmin={() => setGuestPreview(false)} />
                     <GuestGallery onImageClick={setDetailImage} showToast={showToast} />
                     <ImageDetail image={detailImage} onClose={() => setDetailImage(null)} onZoom={setLightboxImage} showToast={showToast} />
                     <Lightbox image={lightboxImage} onClose={() => setLightboxImage(null)} />
@@ -1047,7 +1059,7 @@
             return (
                 <div className="min-h-screen pb-10 flex flex-col items-center">
                     <Background /><Toast toast={toast} />
-                    <NavBar currentPage={currentPage} onPageChange={setCurrentPage} onLogout={handleLogout} onSettingsOpen={() => setSettingsOpen(true)} />
+                    <NavBar currentPage={currentPage} onPageChange={setCurrentPage} onLogout={handleLogout} onSettingsOpen={() => setSettingsOpen(true)} onGuestPreview={() => setGuestPreview(true)} />
                     <SettingsModal isOpen={settingsOpen} onClose={() => setSettingsOpen(false)} config={config} setConfig={setConfig} />
                     {currentPage === 'upload' && <UploadPage showToast={showToast} config={config} />}
                     {currentPage === 'gallery' && <GalleryPage showToast={showToast} config={config} />}
